# MKKLunaTest

./: Dockerfile  README.md  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
migration/: env.py
migration/versions/: 08224c82d4dc_add_unique_constraints.py  7d373d36e792_init_db.py
src/: main.py
src/core/: __init__.py  config.py  db.py  lifespan.py  logger.py  security.py
src/dto/: __init__.py  building.py  company.py  industry.py
src/mappers/: __init__.py  building.py  company.py  industry.py
src/models/: __init__.py  building.py  company.py  company_industry.py  industry.py
src/routes/: api_router.py  building.py  company.py  industry.py
src/service/: __init__.py  building.py  company.py  industry.py
