[project]
name = "mkklunatest"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.6",
    "uvicorn>=0.36.0",
    "pydantic-settings>=2.7.0",
    "sqlalchemy>=2.0.43",
    "alembic>=1.18.0",
    "asyncpg>=0.30.0",
    "greenlet>=3.1.1",
    "psycopg2-binary>=2.9.7",
]
